# rocket-blog

./: .gitignore  README.md
api/: .env  Cargo.toml  schema.sql
api/migrations/: 1_posts_table.sql  2_posts_table_added_at.sql  3_posts_table_added_at_change_type.sql  4_posts_table_added_votes.sql  5_posts_table_added_pk.sql  6_user_like_table.sql  7_user_like_table_added_timestamp.sql
api/src/: helpers.rs  main.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/app_components/: BlogCard.tsx  SubmitBlogCard.tsx
ui/src/helpers/: fetch-blogs.ts  submit-blogs.ts  use-username.ts
ui/src/types/: Blog.ts  ResponseStatus.ts
